# squad

./: README.md  pyproject.toml
squad/: __main__.py  constants.py  dataloading.py  qa_model.py  streamlit_client.py  web.py
